# InterstellarOutpost.dx11

./: .clang-format  .clang-tidy  .editconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  InterstellarOutpost.slnx  README.md  vcpkg.json
.github/: copilot-instructions.md
GameLogic/: DropDownMenu.h  GameLogic.vcxproj  airstrike.cpp  armour.cpp  bridge.cpp  building.cpp  building.h  buynow_window.cpp  buynow_window.h  centipede.cpp  cheat_window.cpp  cheat_window.h  constructionyard.cpp  darwinian.cpp  darwinian.h  debugmenu.h  egg.cpp  entity.cpp  entity_leg.cpp  lasertrooper.cpp  mainmenus.cpp  mine.cpp  network_window.cpp  officer.cpp  prefs_other_window.cpp  prefs_screen_window.h  prefs_sound_window.cpp  profilewindow.cpp  scripttrigger.cpp  souldestroyer.h  spam.cpp  sporegenerator.cpp  switch.cpp  triffid.cpp  wall.cpp  worldobject.h
IOClient/: CMakeLists.txt  GameApp.h  ParticleSystem.cpp  camera.cpp  camera.h  explosion.h  gamecursor.cpp  gamecursor.h  global_world.cpp  landscape_renderer.cpp  landscape_renderer.h  level_file.cpp  level_file.h  location.cpp  location.h  renderer.h  taskmanager_interface_icons.cpp  team.cpp  unit.cpp
IOServer/: CMakeLists.txt  IOServer.vcxproj
InterstellarOutpost/: GameApp.cpp  InterstellarOutpost.slnx  InterstellarOutpost.vcxproj  InterstellarOutpost.vcxproj.filters  RoutingSystem.cpp  WinMain.cpp  entity_grid.cpp  explosion.cpp  global_internet.cpp  landscape.cpp  location_input.cpp  main.cpp  obstruction_grid.cpp  renderer.cpp  script.cpp  startsequence.cpp  taskmanager.cpp  taskmanager_interface_icons.h  team.h  user_input.cpp
InterstellarOutpost/Assets/: Strings-ENG.json  preferences.txt
InterstellarOutpost/Assets/Input/: input_preferences.txt
InterstellarOutpost/InterstellarOutpost/: InterstellarOutpost.cpp  InterstellarOutpost.vcxproj  InterstellarOutpost.vcxproj.filters  VoxelShaders.hlsl
Libs/GameLogic/: CMakeLists.txt  armyant.cpp  blueprintstore.cpp  controltower.cpp  debugmenu.cpp  engineer.cpp  entity.h  factory.cpp  gunturret.cpp  incubator.cpp  insertion_squad.cpp  insertion_squad.h  lander.cpp  laserfence.cpp  message_dialog.cpp  prefs_graphics_window.cpp  prefs_keybindings_window.cpp  prefs_screen_window.cpp  reallyquit_window.cpp  rocket.cpp  souldestroyer.cpp  spider.cpp  spiritreceiver.cpp  spiritstore.cpp  tripod.cpp  virii.cpp  weapons.cpp
Libs/NeuronClient/: CMakeLists.txt  DDSTextureLoader.h  DX9TextRenderer.h  GuiButton.h  InputTransform.cpp  LegacyTexture.cpp  NetworkClient.cpp  NeuronClient.cpp  NeuronClient.h  control_bindings.cpp  inputdriver_chord.cpp  inputdriver_conjoin.cpp  inputdriver_pipe.cpp  inputfilter_withdelta.cpp  inputspec.cpp  movement2d.cpp  opengl_directx.cpp  opengl_directx.h  opengl_directx_dlist_dev.cpp  preferences.h  profiler.h  sample_cache.h  shape.h  sound_filter.cpp  sound_instance.cpp  sound_instance.h  sound_library_2d.cpp  sound_library_2d.h  sound_library_3d.cpp  soundsystem.h  system_info.h
Libs/NeuronCore/: CMakeLists.txt  DirectXHelper.h  Event.h  FileSys.h  GraphicsCore.h  NetAddress.cpp  NetAddress.h  NetLib.cpp  NetLib.h  NetworkExceptions.h  NetworkThreads.h  Neuron.cpp  Strings.h  TasksCore.cpp  btree.h  fast_darray.h  file_paths.cpp  llist.h  networkupdate.cpp  networkupdate.h  server.cpp  server.h
Libs/NeuronServer/: CMakeLists.txt  NeuronServer.h  pch.h
NeuronClient/: Canvas.cpp  DX9TextRenderer.cpp  Display.cpp  Display.h  InputField.cpp  InputTransform.h  NetworkClient.h  NeuronClient.vcxproj  TextureManager.cpp  TextureManager.h  bitmap.cpp  bitmap.h  input.cpp  input.h  input_types.cpp  inputdriver.h  inputdriver_win32.cpp  movement2d.h  opengl_directx_dlist.cpp  preferences.cpp  profiler.cpp  resource.cpp  resource.h  sample_cache.cpp  shape.cpp  sound_library_3d.h  sound_library_3d_dsound.cpp  soundsystem.cpp  system_info.cpp  user_info.cpp  window_manager_directx.cpp
NeuronCore/: Connection.cpp  Connection.h  EventManager.cpp  EventManager.h  GraphicsCore.cpp  Neuron.h  NeuronCore.vcxproj  PixProfiler.h  Strings.cpp  TasksCore.h  Utility.h  darray.h  file_paths.h  string_utils.h  text_stream_readers.cpp  universal_include.h
NeuronServer/: NeuronServer.vcxproj
cmake/: CompilerAndLinker.cmake  InstallConfig.cmake  InterstellarOutpostConfig.cmake.in  StandardProjectSettings.cmake
